# agenttier

./: .dockerignore  .editorconfig  .gitignore  .golangci.yml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.controller  Dockerfile.router  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  buildspec-deploy.yml  buildspec-teardown.yml  buildspec.yml  deploy.sh  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
api/v1alpha1/: deepcopy_leaf_types_test.go  groupversion_info.go  sandbox_types.go  sandbox_types_test.go  sandboxtemplate_types.go  sandboxtemplate_types_test.go  zz_generated.deepcopy.go
ci/: buildspec-deploy.yml  buildspec-teardown.yml  buildspec.yml
cmd/cli/: cli_test_helpers_test.go  cmd_admin.go  cmd_admin_test.go  cmd_analytics.go  cmd_analytics_test.go  cmd_apikeys.go  cmd_apikeys_test.go  cmd_audit.go  cmd_audit_test.go  cmd_backups.go  cmd_backups_test.go  cmd_bulk.go  cmd_bulk_test.go  cmd_cluster.go  cmd_cluster_test.go  cmd_files.go  cmd_files_test.go  cmd_governance.go  cmd_governance_test.go  cmd_login.go  cmd_login_test.go  cmd_ports.go  cmd_ports_test.go  cmd_sandbox.go  cmd_sandbox_test.go  cmd_sharing.go  cmd_sharing_test.go  cmd_template.go  cmd_template_test.go  cmd_user.go  cmd_user_test.go  cmd_warmpool.go  cmd_warmpool_test.go  cmd_webhooks.go  cmd_webhooks_test.go  config.go  config_test.go  main.go  main_test.go  output.go  (+1 more)
cmd/controller/: main.go
cmd/router/: main.go
cmd/sandbox-runtime/: main.go
config/: config.env.example
config/crd/: agenttier.io_clustersandboxtemplates.yaml  agenttier.io_sandboxes.yaml  agenttier.io_sandboxtemplates.yaml
docker/: Dockerfile.controller  Dockerfile.router
docs/: mkdocs.yml
docs/docs/: agent-memory.md  agent-mode.md  api-versioning.md  architecture.md  backup.md  cli-reference.md  cli.md  cloning.md  features.md  governance.md  gvisor.md  index.md  installation.md  observability.md  performance.md  port-forwarding.md  quickstart.md  scaling.md  sdk.md  security.md  storage.md  templates.md  troubleshooting.md  verifying-images.md
examples/langgraph-agent/: README.md  agent.py  requirements.txt
hack/: bootstrap-tfstate.sh  check-bundle-size.sh  check-license-headers.sh  generate.sh  load-test.sh  perf-smoke.sh  quickstart.sh  release-retention.sh  smoke-test.sh  verify-codegen.sh
hack/lib/: common.sh  version.sh
helm/agenttier/: Chart.yaml  values-local.yaml  values.yaml
images/claude-code/: Dockerfile  entrypoint.sh
images/general-coding/: Dockerfile  entrypoint.sh
images/langgraph/: Dockerfile  README.md  agent.py  entrypoint.sh
images/minimal/: Dockerfile  entrypoint.sh
images/openclaw/: Dockerfile  README.md  entrypoint.sh  openclaw-config.json
images/rl/: Dockerfile  README.md  agent.py  entrypoint.sh  train.py
images/strands-bedrock/: Dockerfile  README.md  agent.py  entrypoint.sh
pkg/agenttierclient/: client.go  client_test.go  cluster.go  cluster_test.go  governance.go  governance_test.go  misc.go  misc_test.go  sandboxes.go  sandboxes_test.go  webhooks.go  webhooks_test.go
pkg/apikeystore/: store.go
pkg/controller/: completion_test.go  dispatch_test.go  lifecycle.go  lifecycle_test.go  networkpolicy.go  networkpolicy_test.go  notify_test.go  pod_builder.go  pod_builder_test.go  pvc.go  pvc_test.go  reconcile_running_test.go  reconcile_span_test.go  restart_count_test.go  runtime_token.go  runtime_token_test.go  sandbox_controller.go  sandbox_controller_test.go  scoped_key.go  scoped_key_test.go  self_heal_test.go  service_account_test.go  snapshot_on_stop_test.go  state_machine.go  state_machine_test.go  template_resolver.go  template_resolver_test.go  timeout.go  timeout_test.go  warmpool_claim_test.go
pkg/crds/: apply.go  apply_more_test.go  apply_test.go  embed.go
pkg/credentials/: provider.go
pkg/governance/: engine.go  engine_test.go  policy.go  policy_test.go
pkg/mongodb/: audit.go  client.go  costs.go  governance.go  sessions.go  users.go
pkg/notifications/: channels_test.go  email.go  notifier.go  notifier_test.go
pkg/otel/: setup.go  setup_test.go  sloghandler.go
pkg/router/: apikey_handlers.go  apikey_handlers_test.go  apikey_store.go  apikey_test.go  archive.go  archive_test.go  authz_routes_test.go  backup_handlers.go  backup_handlers_test.go  bulk_handlers.go  bulk_handlers_test.go  clone_test.go  cluster_nodes.go  cluster_nodes_test.go  cluster_status.go  cluster_status_test.go  (+34 more)
python-sdk/: README.md  pyproject.toml
python-sdk/examples/: basic_usage.py
python-sdk/src/agentloft/: __init__.py  async_client.py  auth.py  client.py  commands.py  files.py  models.py  sandbox.py
python-sdk/src/agenttier/: __init__.py  _http.py  _retry.py  _version.py  admin.py  agent.py  analytics.py  apikeys.py  async_agent.py  async_client.py  async_sandbox.py  audit.py  auth.py  backups.py  bulk.py  cli.py  client.py  cluster.py  commands.py  exceptions.py  files.py  governance.py  models.py  sandbox.py  sharing.py  user.py  warmpool.py  webhooks.py
python-sdk/src/agenttier/mcp/: __init__.py  _client.py  _serialize.py  http_main.py  server.py  stdio_main.py
python-sdk/src/agenttier/mcp/tools/: __init__.py  files.py  fleet.py  sandboxes.py  sharing_backups.py  webhooks.py
python-sdk/tests/: __init__.py  test_agent_api.py  test_analytics_audit_admin.py  test_async_client.py  test_auth.py  test_backups.py  test_bulk_patch.py  test_cli.py  test_client.py  test_files_api.py  test_governance.py  test_http.py  test_imports.py  test_mcp.py  test_models.py  test_retry.py  test_sharing.py  test_user_apikeys.py  test_warmpool_cluster.py  test_webhooks.py
scripts/: boilerplate.go.txt  bootstrap-tfstate.sh  check-bundle-size.sh  check-license-headers.sh  generate.sh  load-test.sh  perf-smoke.sh  quickstart.sh  release-retention.sh  smoke-test.sh
web-ui/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+146 files in other folders)
