[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttier"
# Source of truth is src/agenttier/_version.py — keep both in sync on release.
version = "0.8.1"
description = "Python SDK for AgentTier — isolated, persistent Kubernetes sandboxes for humans and AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "AgentTier Authors" },
]
keywords = ["kubernetes", "sandbox", "ai-agents", "developer-tools", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Clustering",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0,<1.0",
    # pydantic 2.7+ is required: earlier 2.x releases have pydantic-core
    # version ranges that can produce resolver failures when pydantic-core
    # is already pinned by another package in the environment. 2.7.0 was
    # released 2024-04-23 and all Python 3.10+ platforms ship a compatible
    # pydantic-core wheel.
    "pydantic>=2.7.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/agenttier/agenttier"
Documentation = "https://agenttier.github.io/agenttier/sdk/"
Repository = "https://github.com/agenttier/agenttier"
Issues = "https://github.com/agenttier/agenttier/issues"
Changelog = "https://github.com/agenttier/agenttier/blob/main/CHANGELOG.md"

[project.scripts]
agenttier = "agenttier.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttier"]

[tool.hatch.build.targets.wheel.force-include]
"src/agenttier/py.typed" = "agenttier/py.typed"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
