[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttier"
# Source of truth is src/agenttier/_version.py — keep both in sync on release.
version = "0.8.1"
description = "Python SDK for AgentTier — isolated, persistent Kubernetes sandboxes for humans and AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "AgentTier Authors" },
]
keywords = ["kubernetes", "sandbox", "ai-agents", "developer-tools", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Clustering",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0,<1.0",
    # pydantic 2.7+ is required: earlier 2.x releases have pydantic-core
    # version ranges that can produce resolver failures when pydantic-core
    # is already pinned by another package in the environment. 2.7.0 was
    # released 2024-04-23 and all Python 3.10+ platforms ship a compatible
    # pydantic-core wheel.
    "pydantic>=2.7.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "mypy>=1.10",
]
# FR7 (stretch): MCP server mirroring the SDK 1:1. Kept optional so the base
# SDK install stays free of the mcp package's own dependency tree (uvicorn,
# starlette, etc.) for callers who only want the REST client.
mcp = [
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/agenttier/agenttier"
Documentation = "https://agenttier.github.io/agenttier/sdk/"
Repository = "https://github.com/agenttier/agenttier"
Issues = "https://github.com/agenttier/agenttier/issues"
Changelog = "https://github.com/agenttier/agenttier/blob/main/CHANGELOG.md"

[project.scripts]
agenttier = "agenttier.cli:main"
agenttier-mcp = "agenttier.mcp.stdio_main:main"
agenttier-mcp-http = "agenttier.mcp.http_main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agenttier"]

[tool.hatch.build.targets.wheel.force-include]
"src/agenttier/py.typed" = "agenttier/py.typed"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

# The mcp extra (FR7, stretch) is optional — `pip install agenttier[mcp]`.
# Without it installed, mypy has no stubs for mcp.server.fastmcp and fails
# import-not-found on the whole SDK gate. ignore_missing_imports makes the
# module resolve as Any in that case; when the extra IS installed, mcp
# ships its own inline types and mypy uses those instead (this override
# only kicks in when stubs are genuinely absent).
[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true

# agenttier.mcp.server's FastMCP(**fastmcp_kwargs) call carries a
# `# type: ignore[arg-type]` that is genuinely needed only when mcp IS
# installed (FastMCP's real stubs reject **dict-typed kwargs under strict
# mode — 15 concrete arg-type errors without it, verified). When mcp is
# NOT installed, the override above resolves FastMCP as Any, which accepts
# any call shape with zero checking — so the same ignore comment becomes
# "unused" in that state. Since the ignore's necessity is conditional on an
# optional dependency neither install state can satisfy on its own, disable
# the unused-ignore check for this one file rather than the whole package.
[[tool.mypy.overrides]]
module = "agenttier.mcp.server"
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
